<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg">

    <!-- Top image -->
    <androidx.cardview.widget.CardView
        android:id="@+id/petBg"
        android:layout_width="match_parent"
        android:layout_height="315dp"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="-20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_265sdp"
        android:layout_height="@dimen/_355sdp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="@dimen/_120sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Content Login-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp">
            <!-- Title -->
            <TextView
                android:id="@+id/title_access"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_welcome"
                android:textColor="@color/maroon"
                android:gravity="center"
                android:fontFamily="sans-serif-medium"
                android:layout_margin="@dimen/_10sdp"
                android:textSize="27sp" />
            <!-- Email input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_20sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/title_email"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/pink_light">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textCursorDrawable="@color/black"
                    android:textSize="15sp"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/title_password"
                app:hintTextColor="@color/black"
                app:endIconMode="password_toggle"
                app:boxStrokeColor="#e8b3b8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Forgot password btn -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:textColor="@color/pink_light_medium"
                android:textSize="13sp"
                android:text="@string/title_password_recovery"/>
            <!-- Login btn -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="@dimen/_155sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/btn_login"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/title_login"/>

            <!-- New account-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_35sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="sans-serif"
                    android:text="@string/title_not_account"/>

                <!-- Register btn-->
                <TextView
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:fontFamily="sans-serif"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="#d19ba0"
                    android:text="@string/title_click"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>