<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg"
    tools:context=".user_cases.register.RegisterActivity">

    <LinearLayout
        android:layout_width="@dimen/_265sdp"
        android:layout_height="@dimen/_485sdp"
        android:background="@drawable/bg_register"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="@dimen/_64sdp"
            android:layout_height="@dimen/_64sdp"
            android:src="@drawable/ic_add_photo"
            android:background="@drawable/bg_profile_photo"
            android:scaleType="centerCrop"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_gravity="center"/>

        <!-- Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameLayoutRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_25sdp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/title_name"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/pink_light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInputRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:textCursorDrawable="@color/black"
                android:textSize="15sp"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Email input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayoutRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/title_email"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/pink_light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInputRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@color/black"
                android:textSize="15sp"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Password input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayoutRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/title_password"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:hintTextColor="@color/black"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="#e8b3b8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInputRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textCursorDrawable="@color/black"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Confirm Password input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayoutRegisterConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/title_confirm_password"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:hintTextColor="@color/black"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="#e8b3b8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInputRegisterConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textCursorDrawable="@color/black"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Login btn -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="@dimen/_155sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/btn_login"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/title_register"/>
        <!-- Have account-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_25sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/colorBlack"
                android:fontFamily="sans-serif"
                android:text="@string/title_have_account"/>

            <!-- Register btn-->
            <TextView
                android:id="@+id/btnCloseRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2sdp"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/_12sdp"
                android:textColor="#d19ba0"
                android:text="@string/title_click"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>